--- a/10.Descriptive_Statistics.ipynb
+++ b/10.Descriptive_Statistics.ipynb
@@ -969,7 +969,7 @@
    "source": [
     "### numpy를 이용한 상관계수\n",
     "\n",
-    "* ```np.corrcoef(x)```는 x가 2차원 행렬일 때, 각 행들간의 상관계수 행렬 계산"
+    "* ```np.corrcoef(x)```는 ```x```가 2차원 행렬일 때, 각 행들간의 상관계수 행렬 계산"
    ]
   },
   {
