--- a/11.Probability.ipynb
+++ b/11.Probability.ipynb
@@ -586,7 +586,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### random walks"
+    "### random walks\n",
+    "\n",
+    "일련의 무작위 단계로 구성된 경로를 설명하는 랜덤 확률과정"
    ]
   },
   {
