--- a/13.Classes.ipynb
+++ b/13.Classes.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Python에서 class의 기능을 간략히 알아본다.\n",
+    "\n",
     "* Python에서 string, dictionary, integer, function 등은 모두 object (객체)이다.  \n",
     "* ```in``` 등 과 같은 키워드와 변수명 등을 제외하고는 Python의 모든 것은 object라고 불리운다.  \n",
     "* Class는 이러한 object들을 만들어 낼 수 있는 틀, 혹은 템플릿을 일컫는다.  \n",
